syntax = "proto3";

package user;

option java_package = "com.proto.user";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  uint32 age = 4;
  string phone = 5;
  string email = 6;
}

message UserId {
  string id = 1;
}

service UserService {
  rpc createUser(User) returns (UserId);
  rpc readUser(UserId) returns (User);
  rpc updateUser(UserId) returns (google.protobuf.Empty);
  rpc listUsers(google.protobuf.Empty) returns (stream User);
  rpc deleteUser(UserId) returns (google.protobuf.Empty);
}